fix animation flicker

--- a/app/home/index.module.css
+++ b/app/home/index.module.css
@@ -29,6 +29,7 @@
   justify-content: center;
   align-items: center;
   color: #f0f0f0;
+  height: 525px;
   font-size: 24px;
   font-weight: 700;
 }
